k8s/namespaces/home/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  selector:
    app.kubernetes.io/name: homeassistant
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: homeassistant
  type: ClusterIP
